# moz-social-analytics-demo

./: README.md  pyproject.toml
dbt/moz_social/: dbt_project.yml
dbt/moz_social/models/mozsocial_analytics_dev/: activity_first_2_weeks.sql  activity_first_2_weeks.yml
