[tool.poetry]
name = "moz-social-analytics-demo"
version = "0.1.0"
description = ""
authors = ["Braun <breyes@mozilla.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "moz_social_analytics_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
dbt-bigquery = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
